--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,7 +5,7 @@ services:
      image: redis
      expose: 
        - 6379
-       
+
   customer_order:
       container_name: customer_order
       build: .
@@ -28,6 +28,15 @@ services:
     volumes:
       - ./mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js
       - customer_order_db:/data/db
+  
+  customer_order_test:
+    container_name: customer_order_test
+    build: ./test
+    depends_on:
+      - customer_order
+      - customer_order_db
+    volumes:
+      - ./test:/app
 
 volumes:
   customer_order_db:
